--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -6,14 +6,14 @@
   <div class="mb-5">
     <h1>Все посты пользователя {{ author.get_full_name }}</h1>
     <h3>Всего постов: {{ page_obj.paginator.count }}</h3>
-    {% if following %}
+    {% if following and author != user %}
       <a
         class="btn btn-lg btn-light"
         href="{% url 'posts:profile_unfollow' author.username %}" role="button"
       >
         Отписаться
       </a>
-    {% else %}
+    {% elif author != user %}
       <a
         class="btn btn-lg btn-primary"
         href="{% url 'posts:profile_follow' author.username %}" role="button"
